src/css/components.css
@import url('./variables.css');

/* Componentes Principais */
.todo-container {
  background-color: var(--bg-container);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
}
.todo-item {
  background: var(--darkness-color);
  color: #fff; 
  border: 4px solid #000; 
  box-shadow: inset 0 0 0 1px #000; 
  overflow: hidden;
  position: relative;
  transition: all 0.5s ease-in-out;
}

.todo-item:hover {
  transform: scale(1.03); 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  color: var(--primary-color);
  background: var(--darkness-color); 
  border: 4px solid #212529;
  box-shadow: inset 0 0 0 2px var(--primary-color);
}

.todo-item::after {
  background: var(--darkness-color);
  border: 0 solid #000;
  content: "";
  height: 195px;
  left: -75px;
  opacity: 0.8;
  position: absolute;
  top: -25px;
  transform: rotate(35deg);
  width: 50px;
  transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
  z-index: 1;
}

.todo-item:hover::after {
  background: #fff;
  opacity: 0;
  left: 120%;
  transform: rotate(40deg);
}


.todo-date {
  color: var(--primary-color);
}
/* Botões */
.button {
  background-color: var(--bg-btn);
  color: var(--primary-color);
  border: 1px solid var(--border-color);
  border-radius: 5px;
  padding: 8px 12px;
  transition: background-color 0.3s ease, transform 0.3s ease;
}
.button:hover {
  background-color: var(--hover-color);
  transform: scale(1.05);
}

/* Modal */
.modal-backdrop.show {
  backdrop-filter: blur(5px) !important;
  background-color: rgba(0, 0, 0, 0.5) !important;
}
.modal {
  --bs-modal-color: var(--primary-color);
  --bs-modal-bg: var(--darkness-color);
  --bs-modal-border-color: var(--border-color);
}
.modal-header {
  border-bottom: none !important;
}
.modal-footer {
  border-top: none !important;
}

/* Descrição e Tarefas */
#task-desc,
.description {
  background: var(--bg-form-control);
  padding: 15px;
  border-radius: 5px;
  margin-top: 10px;
  word-wrap: break-word;
  white-space: normal;
  overflow-wrap: break-word;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
}

